# auth-pack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TOKEN_USAGE_GUIDE.md  conftest.py  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  test_migrations.py
.claude/: AUDIT_TRAIL_IMPLEMENTATION.md  README.md  SECURITY_STANDARDS.md  SOC2_COMPLIANCE.md
.claude/agents/: blockauth-assistant.md  blockauth-security.md
.claude/hooks/: doc-update-hook.md  post-commit-hook.md  pre-commit-hook.md  security-enforcement-hook.md
.cursor/: rules
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  publish.yml
.insomnia/: collection.json
blockauth/: __init__.py  apps.py  authentication.py  communication.py  conf.py  conftest.py  constants.py  enums.py  notification.py  observability.py  settings.py  triggers.py  urls.py
blockauth/apple/: __init__.py  _settings.py  apps.py  client_secret.py  constants.py  docs.py  exceptions.py  id_token_verifier.py  nonce.py  notification_service.py  revocation_client.py  serializers.py  signals.py  throttles.py  views.py
blockauth/constants/: __init__.py  core.py  sensitive_fields.py
blockauth/docs/: __init__.py  apple_docs.py  auth_docs.py  social_auth.py  social_auth_docs.py  test_apple_google_native_schemas.py  wallet_auth_docs.py  wallet_docs.py
blockauth/jwt/: __init__.py  interfaces.py  token_manager.py
blockauth/kdf/: IMPLEMENTATION_SUMMARY.md  PERFORMANCE_GUIDE.md  README.md  __init__.py  config_example.py  constants.py  run_tests.py  services.py  tests.py  usage_examples.py
blockauth/migrations/: 0001_initial.py  0002_add_wallet_address.py  0002_alter_otp_subject_passkeychallenge_passkeycredential.py  0002_passkey.py  0002_rename_otp_code_otp_code.py  0002_walletloginnonce.py  0003_alter_otp_subject.py  0003_otp_add_payload.py  0003_passkey_validators.py  0004_add_authentication_types.py  0004_social_identity.py  0004_totp_2fa.py  0005_scope_social_identity_table.py
blockauth/models/: __init__.py  otp.py  user.py  wallet_login_nonce.py
blockauth/passkey/: README.md  __init__.py  config.py  constants.py  exceptions.py  models.py  utils.py  views.py
blockauth/schemas/: account_settings.py  factory.py  login.py  password_reset.py  signup.py  social_auth.py
blockauth/serializers/: otp_serializers.py  user_account_serializers.py  wallet_auth_serializers.py  wallet_serializers.py
blockauth/services/: __init__.py  wallet_login_service.py  wallet_user_linker.py
blockauth/social/: __init__.py  apps.py  encryption.py  exceptions.py  linking_policy.py  models.py  service.py
blockauth/stepup/: __init__.py  receipt.py
blockauth/totp/: __init__.py  config.py  constants.py  exceptions.py  models.py  serializers.py  urls.py  views.py
blockauth/utils/: audit.py  auth_state.py  config.py  custom_exception.py  docs.py  feature_flags.py  generics.py  logger.py  oauth_state.py  outbound_http.py  permissions.py  pkce.py  rate_limiter.py  siwe.py  social.py  token.py  token_blacklist.py  validators.py
blockauth/views/: basic_auth_views.py  facebook_auth_views.py  google_auth_views.py  google_native_serializers.py  google_native_views.py  linkedin_auth_views.py  wallet_auth_views.py
docs/: 2FA_IMPLEMENTATION_GUIDE.md  2FA_QUICK_START.md  2FA_TECHNICAL_SPECIFICATION.md  CUSTOM_JWT_CLAIMS.md  E2E_TESTING.md  JWT_EXTENSION_GUIDE.md  PASSKEY_WEBAUTHN_IMPLEMENTATION_PLAN.md  TOKEN_USAGE_GUIDE.md  WEBAUTHN_PASSKEY_DPIA.md  changelog.md  index.md
docs/account_abstraction/: ACCOUNT_ABSTRACTION_API.md  ACCOUNT_ABSTRACTION_IMPLEMENTATION.md  ACCOUNT_ABSTRACTION_TODO.md  BlockAuth_Account_Abstraction_Whitepaper.md  DEPLOYMENT_GUIDE.md  PAYMASTER_INTEGRATION.md  SIGNATURE_AGGREGATOR_INTEGRATION.md  TROUBLESHOOTING_GUIDE.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: apple-sign-in-setup.md  jwt-tokens.md  kdf-system.md  oauth.md  passkey-webauthn.md  signup-login.md  step-up-auth.md  totp-2fa.md  wallet-auth.md
docs/reference/: api-endpoints.md  management-commands.md  models.md  settings.md
docs/security/: overview.md  security-standards.md
examples/: jwt_token_example.py
scripts/: sign_siwe.py  webauthn_client.py
tests/: models.py
tests_e2e/: __init__.py  apps.py  manage.py  models.py  settings.py  test_views.py  urls.py
(+109 files in other folders)
