[tool.poetry]
name = "blockauth"
version = "0.2.0"
description = "Comprehensive Python authentication package bridging Web2 and Web3"
authors = ["BloclabsHQ <eng@bloclabs.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.0,<6.0"
pyjwt = ">=2.8,<3.0"
requests = ">=2.31,<3.0"
djangorestframework = ">=3.14,<4.0"
django-ratelimit = ">=4.1,<5.0"
drf-spectacular = ">=0.27,<1.0"
web3 = "^6.20.1"
eth-account = "^0.11.0"
cryptography = "^46.0.5"
argon2-cffi = "^23.0.0"
webauthn = "^2.0.0"
uuid6 = "^2024.7.10"

[tool.poetry.group.dev.dependencies]
black = "^26.3.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
autoflake = "^2.3.0"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
